platform/buildkit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkitd
  namespace: buildkit
spec:
  type: ClusterIP
  selector:
    app: buildkitd
  ports:
    - port: 1234
      targetPort: 1234
